--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,12 @@
 .menu{
     background-color: #003863;
 }
+
+.btn.btn-primary{
+     background-color: #003863 !important;
+    border-color: #003863 !important;
+}
+
+.fondogris{
+    background-color: #D3D3D3;
+}
